test/parsing/errors/nameLength/shortName.chpl
writeln("A short File Name");
